@startuml

!include ../../PlantumlStyle/libs/core.puml


package TargetInstrInfo {

    class TargetInstrInfo {

    }

    note top of TargetInstrInfo
        <b><color:royalBlue>在LLVM中,TargetInstrInfo是一个用于描述目标体系结构指令信息的类;它提供了一组方法和函数,用于\
            操作和查询与目标体系结构相关的指令</color>
    endnote

    package Cpu0GenInstrInfo {
        struct Cpu0GenInstrInfo {
            +Cpu0GenInstrInfo()
        }

        note left of Cpu0GenInstrInfo
            <b><color:royalBlue>该类来TableGen生成的\
                Cpu0GeninstrInfo.inc\
                文件</color>
        endnote
    }


    class Cpu0InstrInfo {

    }

    class Cpu0SEInstrInfo {

    }

    Cpu0GenInstrInfo                    -up-|>          TargetInstrInfo
    Cpu0InstrInfo                       -up-|>          Cpu0GenInstrInfo
    Cpu0SEInstrInfo                     -up-|>          Cpu0InstrInfo
}


@enduml